--- a/public/calculator.css
+++ b/public/calculator.css
@@ -1,117 +1,74 @@
-.white{
-    border-bottom-width: 35px;
-    border-bottom-style: solid;
-    border-bottom-color: #3d3935;
-    border-top-width: 35px;
-    border-top-style: solid;
-    border-top-color: #3d3935;
-}
-
-body {
-
-	background-color: #AB0E23;
-    vertical-align: middle;
-    height: auto;
-}
-
-h3{
-
-    color: #AB0E23;
-}
-
-table {
+table, tr, th, td {
+    border: 2px solid #808080;
+    table-layout: fixed;
+    height: 45px;
+    width: 200px;
+    margin-left: 30px;
+    background-color: #E6F1F5;
     border-collapse: collapse;
-}
-
-th {
-
-    height: 20px;
-    width: 100px;
-    background-color: #DCDFE0;
-    margin-left: 50px;
     text-align: left;
-    padding-left: 5px;
-    font-size: 93%;
-}
-td {
-
-    width: 150px;
-    padding-left: 5px;
-
 }
 
-table, td, th {
+td{
+  padding: 5px;
+}
+
+th{
+  background-color: #D3D3D8;
+  height: 20px;
+}
+
+h1{
+  margin-left: 50px;
+  font-family: Sans-serif;
+
+}
+h2{
+   color: #9C2424;
+ }
+h3{
+  color:#9C2424;
+}
+
+button {
+    background-color: #9C2424;
+    position: relative;
     border: 1px solid black;
-    border-color: #C8CBCC;
-}
-
-.button {
-    background-color: #AB0E23; /* Green */
-    border: none;
     color: white;
-    width: 70px;
-    padding: 8px;
-    text-align: center;
+    float: right;
+    padding: 5px 20px;
+    text-align:right;;
     text-decoration: none;
     display: inline-block;
-    font-size: 11px;
+    font-size: 16px;
+    margin: 4px 2px;
+    margin-right: 40px;
     cursor: pointer;
-    margin-left: 800px;
-    border-radius: 4px;
-   float: right;
-   margin-left: 10px;
-   margin-top: -20px;
-
-}
-.lightgray{
-    background-color: #E6F1F5;
-    padding: 15px;
-    margin-left: 20px;
-    width: 750px;
-    border-radius: 3px;
-    height: 550px;
-    margin-bottom: 300px;
-    height: auto;
-    margin-bottom: 50px;
-
-}
-
-.white{
-    background-color: white;
-    width: 1050px;
-    height: 470px;
-    margin: auto;
-    height: auto;
-    padding: 1px;
-
-}
-
-h2 {
-    margin-left: 18px;
-    padding-top: 45px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    font-weight: normal;
+  }
+#mydivwhite{
+  background-color: white;
+  margin-left: 20px;
+  margin-right: 30px;
+  padding-bottom: 80px;
 }
 
 
-input.field {
-    width: 60px;
-    height: 17px;
-    margin: 7.5px;
+#mydiv {
+      border: 1px solid #E6F1F5;
+      background-color: #E6F1F5;
+      padding-bottom: 60px;
+      width: 1200px;
+      margin-left: 50px;
+      margin-right: 40px;
+  }
 
+input {
+    display: inline-block;
+    float: left;
+    width: 120px;
+    padding: 3px;
+    margin: 1.5px;
 }
-
-.answer{
-    width: 100px;
-    margin-bottom: -50px;
-}
-
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin: 0;
+body{
+  background-color: #9C2424;
 }
